src/snapshots/serve_session__change_file_in_project_after.snap
---
source: src/serve_session.rs
expression: "view_tree(&session.tree(), &mut redactions)"
---
id: id-1
name: change_file_in_project
class_name: Folder
properties: {}
metadata:
  ignore_unknown_instances: true
  instigating_source:
    Path: /foo/default.project.json
  relevant_paths:
    - /foo/default.project.json
  context:
    path_ignore_glob: []
children:
  - id: id-2
    name: Child
    class_name: StringValue
    properties:
      Value:
        Type: String
        Value: Changed!
    metadata:
      ignore_unknown_instances: false
      instigating_source:
        ProjectNode:
          - Child
          - class_name: ~
            children: {}
            properties: {}
            ignore_unknown_instances: ~
            path: /foo/file.txt
      relevant_paths:
        - /foo/file.txt
        - /foo/file.meta.json
      context:
        path_ignore_glob: []
    children: []
