src/snapshots/serve_session__change_script_meta_after.snap
---
source: src/serve_session.rs
expression: "view_tree(&session.tree(), &mut redactions)"
---
id: id-1
name: root
class_name: Folder
properties: {}
metadata:
  ignore_unknown_instances: false
  instigating_source:
    Path: /root
  relevant_paths:
    - /root
    - /root/init.meta.json
    - /root/init.lua
    - /root/init.server.lua
    - /root/init.client.lua
children:
  - id: id-2
    name: test
    class_name: ModuleScript
    properties:
      Source:
        Type: String
        Value: This is a test.
    metadata:
      ignore_unknown_instances: false
      instigating_source:
        Path: /root/test.lua
      relevant_paths:
        - /root/test.lua
        - /root/test.meta.json
    children: []
