src/snapshots/serve_session__change_script_meta_patch.snap
---
source: src/serve_session.rs
expression: redactions.redacted_yaml(changes)
---
- 1
- - removed: []
    added: []
    updated:
      - id: id-2
        changed_name: ~
        changed_class_name: ~
        changed_properties: {}
        changed_metadata:
          ignore_unknown_instances: false
          instigating_source:
            Path: /root/test.lua
          relevant_paths:
            - /root/test.lua
            - /root/test.meta.json
          context:
            path_ignore_glob: []
