src/snapshots/serve_session__change_txt_file_patch.snap
---
source: src/serve_session.rs
expression: redactions.redacted_yaml(result)
---
- 1
- - removed: []
    added: []
    updated:
      - id: id-1
        changed_name: ~
        changed_class_name: ~
        changed_properties:
          Value:
            Type: String
            Value: World!
        changed_metadata: ~
