src/snapshots/serve_session__just_folder.snap
---
source: src/serve_session.rs
expression: "view_tree(&session.tree(), &mut rm)"
---
id: id-1
name: foo
class_name: Folder
properties: {}
metadata:
  ignore_unknown_instances: false
  instigating_source:
    Path: /foo
  relevant_paths:
    - /foo
    - /foo/init.meta.json
    - /foo/init.lua
    - /foo/init.server.lua
    - /foo/init.client.lua
  context:
    path_ignore_glob: []
children: []
