src/snapshots/serve_session__project_with_folder.snap
---
source: src/serve_session.rs
expression: "view_tree(&session.tree(), &mut rm)"
---
id: id-1
name: HelloWorld
class_name: Folder
properties: {}
metadata:
  ignore_unknown_instances: false
  instigating_source:
    Path: /foo/default.project.json
  relevant_paths:
    - /foo/src
    - /foo/src/init.meta.json
    - /foo/default.project.json
children:
  - id: id-2
    name: hello
    class_name: StringValue
    properties:
      Value:
        Type: String
        Value: "Hello, world!"
    metadata:
      ignore_unknown_instances: false
      instigating_source:
        Path: /foo/src/hello.txt
      relevant_paths:
        - /foo/src/hello.txt
        - /foo/src/hello.meta.json
    children: []
