src/snapshots/serve_session__script_with_meta.snap
---
source: src/serve_session.rs
expression: "view_tree(&session.tree(), &mut rm)"
---
id: id-1
name: root
class_name: Folder
properties: {}
metadata:
  ignore_unknown_instances: false
  instigating_source:
    Path: /root
  relevant_paths:
    - /root
children:
  - id: id-2
    name: test
    class_name: ModuleScript
    properties:
      Source:
        Type: String
        Value: This is a test.
    metadata:
      ignore_unknown_instances: true
      instigating_source:
        Path: /root/test.lua
      relevant_paths:
        - /root/test.lua
        - /root/test.meta.json
    children: []
